integration_tests/juniper_tests/fail/object/derive_no_underscore.rs
#[derive(juniper::GraphQLObject)]
struct Object {
    __field: String,
}

fn main() {}
